Fixed modal stretching on mobile devices

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -64,6 +64,8 @@
     top: 15px;
     right: 35px;
     color: #f1f1f1;
+    background-color: white;
+    margin:10px;
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
@@ -79,6 +81,9 @@
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
     .modal-content {
-        width: 100%;
+      width: auto;
+      min-width: 100%;
+      height: auto;
+      min-width: 100%;
     }
 }
